# ITracker

./: Cargo.toml  Readme.md  config.toml  logs.txt
src/: args.rs  config.rs  csv_export.rs  log.rs  main.rs  timer.rs  tui.rs
