[package]
name = "Itraker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.14.0"
crossterm = "0.28.1"
csv = "1.3.0"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tui-textarea = "0.6.1"
